--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,10 @@
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
-    "initializer_list": "cpp"
+    "initializer_list": "cpp",
+    "iostream": "cpp",
+    "__node_handle": "cpp",
+    "string": "cpp",
+    "vector": "cpp"
   }
 }
